# Fast-FizzBuzz

./: CMakeLists.txt  README.md  main.cpp
